@startuml
skinparam linetype ortho
skinparam backgroundColor #1E1E1E
skinparam defaultTextAlignment center
skinparam ArrowColor #B0C4DE
skinparam shadowing false
skinparam FontColor #FFFFFF
skinparam classFontColor #FFFFFF
skinparam classAttributeFontColor #FFFFFF
skinparam classMethodFontColor #FFFFFF

skinparam class {
  BackgroundColor #2D2D2D
  BorderColor #8A8A8A
  FontColor #E0E0E0
}

!include Mapper.puml
!include ToEntityMapper.puml
!include LongIdMapper.puml
!include StringNameMapper.puml
!include LongVersionMapper.puml

interface CategoryDTOToCategoryMapper extends Mapper, ToEntityMapper {
    + void map(CategoryDTO source, Category target)
    + Category mapToEntity(CategoryDTO categoryDTO)
}

class SimpleCategoryDTOToCategoryMapper implements CategoryDTOToCategoryMapper {
    - LongIdMapper longIdMapper
    - StringNameMapper stringNameMapper
    - LongVersionMapper longVersionMapper

    + Category mapToEntity(CategoryDTO categoryDTO)
    + void map(CategoryDTO categoryDTO, Category category)
    - void mapId(CategoryDTO categoryDTO, Category category)
    - void mapName(CategoryDTO categoryDTO, Category category)
    - void mapVersion(CategoryDTO categoryDTO, Category category)
}

SimpleCategoryDTOToCategoryMapper --> LongIdMapper
SimpleCategoryDTOToCategoryMapper --> StringNameMapper
SimpleCategoryDTOToCategoryMapper --> LongVersionMapper
@enduml